// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/maven/index extractAllPackageFiles should return package files info 1`] = `
[
  {
    "datasource": "maven",
    "deps": [
      {
        "currentValue": "42",
        "datasource": "maven",
        "depName": "org.example:parent",
        "depType": "parent",
        "fileReplacePosition": 186,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
      },
      {
        "currentValue": "0.0.1",
        "datasource": "maven",
        "depName": "org.example:foo",
        "depType": "compile",
        "fileReplacePosition": 905,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
      },
      {
        "currentValue": "1.0.0",
        "datasource": "maven",
        "depName": "org.example:bar",
        "depType": "compile",
        "fileReplacePosition": 1093,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
      },
      {
        "currentValue": "2.4.2",
        "datasource": "maven",
        "depName": "org.apache.maven.plugins:maven-release-plugin",
        "depType": "build",
        "fileReplacePosition": 1347,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
      },
      {
        "currentValue": "1.8.1",
        "datasource": "maven",
        "depName": "org.apache.maven.scm:maven-scm-provider-gitexe",
        "depType": "build",
        "fileReplacePosition": 1545,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
      },
      {
        "currentValue": "1.0",
        "datasource": "maven",
        "depName": "org.example:extension-artefact",
        "depType": "build",
        "fileReplacePosition": 2276,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
      },
      {
        "currentValue": "0.0.1",
        "datasource": "maven",
        "depName": "org.example:\${artifact-id-placeholder}",
        "depType": "compile",
        "fileReplacePosition": 2484,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
        "skipReason": "name-placeholder",
      },
      {
        "currentValue": "0.0.1",
        "datasource": "maven",
        "depName": "\${group-id-placeholder}:baz",
        "depType": "compile",
        "fileReplacePosition": 2634,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
        "skipReason": "name-placeholder",
      },
      {
        "currentValue": "1.2.3.4",
        "datasource": "maven",
        "depName": "org.example:quux",
        "depType": "compile",
        "fileReplacePosition": 698,
        "groupName": "quuxVersion",
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
      },
      {
        "currentValue": "1.2.3.4",
        "datasource": "maven",
        "depName": "org.example:quux-test",
        "depType": "compile",
        "fileReplacePosition": 698,
        "groupName": "quuxVersion",
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
      },
      {
        "currentValue": "1.2.3",
        "datasource": "maven",
        "depName": "org.example:quuz",
        "depType": "test",
        "fileReplacePosition": 3086,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
      },
      {
        "currentValue": "it's not a version",
        "datasource": "maven",
        "depName": "org.example:quuuz",
        "depType": "compile",
        "fileReplacePosition": 3252,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
      },
      {
        "currentValue": "[1.0.0]",
        "datasource": "maven",
        "depName": "org.example:hard-range",
        "depType": "compile",
        "fileReplacePosition": 3410,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
      },
      {
        "currentValue": "1.0.0",
        "datasource": "maven",
        "depName": "org.example:optional",
        "depType": "optional",
        "fileReplacePosition": 3555,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
      },
      {
        "currentValue": "1.0",
        "datasource": "maven",
        "depName": "org.example:relocation-artifact",
        "fileReplacePosition": 3787,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
      },
      {
        "currentValue": "\${profile-placeholder}",
        "datasource": "maven",
        "depName": "org.example:profile-artifact",
        "depType": "compile",
        "fileReplacePosition": 4119,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
        "skipReason": "version-placeholder",
      },
      {
        "currentValue": "2.17",
        "datasource": "maven",
        "depName": "org.example:profile-build-artefact",
        "depType": "build",
        "fileReplacePosition": 4375,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
      },
      {
        "currentValue": "2.17",
        "datasource": "maven",
        "depName": "org.apache.maven.plugins:maven-checkstyle-plugin",
        "depType": "build",
        "fileReplacePosition": 4769,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "https://maven.atlassian.com/content/repositories/atlassian-public/",
        ],
      },
    ],
    "packageFile": "random.pom.xml",
    "packageFileVersion": "0.0.1",
    "parent": "../pom.xml",
  },
]
`;

exports[`modules/manager/maven/index updateDependency should include registryUrls from parent pom files 1`] = `
[
  {
    "datasource": "maven",
    "deps": [
      {
        "currentValue": "42",
        "datasource": "maven",
        "depName": "org.example:child",
        "depType": "parent",
        "fileReplacePosition": 185,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "http://example.com/nexus/xyz",
          "http://example.com/",
        ],
      },
      {
        "currentValue": "1.2.3.4",
        "datasource": "maven",
        "depName": "org.example:quux",
        "depType": "compile",
        "editFile": "parent.pom.xml",
        "fileReplacePosition": 470,
        "groupName": "quuxVersion",
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "http://example.com/",
          "http://example.com/nexus/xyz",
        ],
      },
    ],
    "packageFile": "parent.pom.xml",
    "parent": "child.pom.xml",
  },
  {
    "datasource": "maven",
    "deps": [
      {
        "currentValue": "42",
        "datasource": "maven",
        "depName": "org.example:parent",
        "depType": "parent",
        "fileReplacePosition": 186,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "http://example.com/",
          "http://example.com/nexus/xyz",
        ],
      },
      {
        "currentValue": "0.0.1",
        "datasource": "maven",
        "depName": "org.example:foo",
        "depType": "compile",
        "fileReplacePosition": 806,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "http://example.com/",
          "http://example.com/nexus/xyz",
        ],
      },
      {
        "currentValue": "1.0.0",
        "datasource": "maven",
        "depName": "org.example:bar",
        "depType": "compile",
        "fileReplacePosition": 954,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "http://example.com/",
          "http://example.com/nexus/xyz",
        ],
      },
      {
        "currentValue": "2.4.2",
        "datasource": "maven",
        "depName": "org.apache.maven.plugins:maven-release-plugin",
        "depType": "build",
        "fileReplacePosition": 1188,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "http://example.com/",
          "http://example.com/nexus/xyz",
        ],
      },
      {
        "currentValue": "1.8.1",
        "datasource": "maven",
        "depName": "org.apache.maven.scm:maven-scm-provider-gitexe",
        "depType": "build",
        "fileReplacePosition": 1386,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "http://example.com/",
          "http://example.com/nexus/xyz",
        ],
      },
      {
        "currentValue": "0.0.1",
        "datasource": "maven",
        "depName": "org.example:\${artifact-id-placeholder}",
        "depType": "compile",
        "fileReplacePosition": 2131,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "http://example.com/",
          "http://example.com/nexus/xyz",
        ],
        "skipReason": "name-placeholder",
      },
      {
        "currentValue": "0.0.1",
        "datasource": "maven",
        "depName": "\${group-id-placeholder}:baz",
        "depType": "compile",
        "fileReplacePosition": 2281,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "http://example.com/",
          "http://example.com/nexus/xyz",
        ],
        "skipReason": "name-placeholder",
      },
      {
        "currentValue": "1.2.3",
        "datasource": "maven",
        "depName": "org.example:quuz",
        "depType": "compile",
        "fileReplacePosition": 2574,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "http://example.com/",
          "http://example.com/nexus/xyz",
        ],
      },
      {
        "currentValue": "it's not a version",
        "datasource": "maven",
        "depName": "org.example:quuuz",
        "depType": "compile",
        "fileReplacePosition": 2714,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "http://example.com/",
          "http://example.com/nexus/xyz",
        ],
      },
      {
        "currentValue": "[1.0.0]",
        "datasource": "maven",
        "depName": "org.example:hard-range",
        "depType": "compile",
        "fileReplacePosition": 2872,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "http://example.com/",
          "http://example.com/nexus/xyz",
        ],
      },
      {
        "currentValue": "\${profile-placeholder}",
        "datasource": "maven",
        "depName": "org.example:profile-artifact",
        "depType": "compile",
        "fileReplacePosition": 3134,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "http://example.com/",
          "http://example.com/nexus/xyz",
        ],
        "skipReason": "version-placeholder",
      },
      {
        "currentValue": "2.17",
        "datasource": "maven",
        "depName": "org.apache.maven.plugins:maven-checkstyle-plugin",
        "depType": "build",
        "fileReplacePosition": 3410,
        "registryUrls": [
          "https://repo.maven.apache.org/maven2",
          "http://example.com/",
          "http://example.com/nexus/xyz",
        ],
      },
    ],
    "packageFile": "child.pom.xml",
    "packageFileVersion": "0.0.1",
    "parent": "parent.pom.xml",
  },
]
`;
